# cbor

./: .gitignore  README.md  bignum_ops.c  bignum_ops.h  cbor.c  cbor_encode.c  cbor_encode.h  compat_endian.h  meson.build  meson.options  pkgIndex.tcl.in
.cache/clangd/index/: bignum_ops.c.87856F02CB89D0F2.idx  bignum_ops.h.89759F385E8A5154.idx  bn_cutoffs.c.C346486277651F3D.idx  bn_deprecated.c.55884354B513272B.idx  bn_mp_2expt.c.51B3F045D92BE6E3.idx  bn_mp_abs.c.47B63504D734EDD1.idx  bn_mp_add.c.69884040263CDCCB.idx  bn_mp_add_d.c.D0EE69D344C8A9A8.idx  bn_mp_addmod.c.4D579D6F90B94759.idx  bn_mp_and.c.6CA5BD6B9A03EE33.idx  bn_mp_clamp.c.9F34516D72A77CD5.idx  bn_mp_clear.c.798F788C6AD12625.idx  bn_mp_clear_multi.c.629227E9FC289AF7.idx  bn_mp_cmp.c.808688741DF18651.idx  bn_mp_cmp_d.c.B1112663CF484F10.idx  bn_mp_cmp_mag.c.722939B113E275F9.idx  bn_mp_cnt_lsb.c.1E6F0C583A507BBC.idx  bn_mp_complement.c.F9A5484120B735BB.idx  bn_mp_copy.c.6614A7859BB0FFE9.idx  bn_mp_count_bits.c.FBA51D8036CABD82.idx  bn_mp_decr.c.1AA240A310D21B88.idx  bn_mp_div.c.FE5D68BCD47FBF39.idx  bn_mp_div_2.c.1C4ACE6F5C7BA7A0.idx  bn_mp_div_2d.c.FF561A8429E54356.idx  bn_mp_div_d.c.52E56032084CD6A5.idx  bn_mp_dr_is_modulus.c.8464E25E96203C81.idx  bn_mp_dr_reduce.c.CE1A1797C49C6095.idx  bn_mp_dr_setup.c.72F05DAB4A59070B.idx  bn_mp_error_to_string.c.9A94DB5A48A45D6B.idx  bn_mp_exch.c.3DF4FBADEBF3EA04.idx  bn_mp_expt_n.c.CA340D8244BA18A6.idx  bn_mp_exptmod.c.5C30B0A254199A22.idx  bn_mp_exteuclid.c.0D3A89D6A832BD47.idx  bn_mp_fread.c.2BBFA47F9BF4C529.idx  bn_mp_from_sbin.c.AF4CE01F49470186.idx  bn_mp_from_ubin.c.95158087BE7B8197.idx  bn_mp_fwrite.c.92723CF6D0A91227.idx  bn_mp_gcd.c.9BECD47DFE54AF20.idx  bn_mp_get_double.c.02B23B6DCA6651B9.idx  bn_mp_get_i32.c.63009FA370A467AA.idx  (+127 more)
.github/workflows/: release.yml
bench/: cbor.bench  last  run.tcl
claude/skills/encoding-decoding-cbor/: SKILL.md
doc/: cbor.md.in  meson.build
doc/examples/: decode_basic.tcl  decode_extract.tcl  decode_navigate.tcl  decode_tags.tcl  encode_primitives.tcl  template_basic.tcl  template_dict.tcl  template_fragment.tcl  template_tag.tcl
generic/: bignum_ops.h  cbor.c  cborInt.h  meson.build
tests/: cbor.test  common.tcl  decode.test  encode.test  examples.test  template.test
tools/: dist_fixup.sh
